manifests/test/cdi/cdi_apps_v1_deployment_cdi-operator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    cdi.kubevirt.io: cdi-operator
    name: cdi-operator
    np.kubevirt.io/allow-access-cluster-services: "true"
    operator.cdi.kubevirt.io: ""
    prometheus.cdi.kubevirt.io: "true"
  name: cdi-operator
  namespace: cdi
spec:
  replicas: 1
  selector:
    matchLabels:
      name: cdi-operator
      operator.cdi.kubevirt.io: ""
  strategy: {}
  template:
    metadata:
      annotations:
        openshift.io/required-scc: restricted-v2
      labels:
        cdi.kubevirt.io: cdi-operator
        name: cdi-operator
        np.kubevirt.io/allow-access-cluster-services: "true"
        operator.cdi.kubevirt.io: ""
        prometheus.cdi.kubevirt.io: "true"
    spec:
      affinity:
        podAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: cdi.kubevirt.io
                  operator: In
                  values:
                  - cdi-operator
              topologyKey: kubernetes.io/hostname
            weight: 1
      containers:
      - env:
        - name: DEPLOY_CLUSTER_RESOURCES
          value: "true"
        - name: OPERATOR_VERSION
          value: v1.65.0
        - name: CONTROLLER_IMAGE
          value: quay.io/kubevirt/cdi-controller:v1.65.0
        - name: IMPORTER_IMAGE
          value: quay.io/kubevirt/cdi-importer:v1.65.0
        - name: CLONER_IMAGE
          value: quay.io/kubevirt/cdi-cloner:v1.65.0
        - name: OVIRT_POPULATOR_IMAGE
          value: quay.io/kubevirt/cdi-importer:v1.65.0
        - name: APISERVER_IMAGE
          value: quay.io/kubevirt/cdi-apiserver:v1.65.0
        - name: UPLOAD_SERVER_IMAGE
          value: quay.io/kubevirt/cdi-uploadserver:v1.65.0
        - name: UPLOAD_PROXY_IMAGE
          value: quay.io/kubevirt/cdi-uploadproxy:v1.65.0
        - name: VERBOSITY
          value: "1"
        - name: PULL_POLICY
          value: IfNotPresent
        - name: MONITORING_NAMESPACE
        image: quay.io/kubevirt/cdi-operator:v1.65.0
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8444
            scheme: HTTP
          initialDelaySeconds: 5
          timeoutSeconds: 10
        name: cdi-operator
        ports:
        - containerPort: 8443
          name: metrics
          protocol: TCP
        - containerPort: 8444
          name: health
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8444
            scheme: HTTP
          initialDelaySeconds: 5
          timeoutSeconds: 10
        resources:
          requests:
            cpu: 100m
            memory: 150Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          runAsNonRoot: true
          seccompProfile:
            type: RuntimeDefault
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: FallbackToLogsOnError
      nodeSelector:
        kubernetes.io/os: linux
      securityContext:
        runAsNonRoot: true
      serviceAccountName: cdi-operator
