manifests/test/cdi/cdi_cert-manager.io_v1_certificate_cdi-uploadproxy-server-cert.yaml
apiVersion: cert-manager.io/v1
kind: Certificate
metadata:
  name: cdi-uploadproxy-server-cert
  namespace: cdi
spec:
  dnsNames:
  - cdi-uploadproxy.10.5.0.56.nip.io
  issuerRef:
    group: cert-manager.io
    kind: ClusterIssuer
    name: cluster-ca
  secretName: cdi-uploadproxy-server-cert
  usages:
  - digital signature
  - key encipherment
