manifests/test/cdi/cdi_gateway.networking.k8s.io_v1_gateway_cdi.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cdi
  namespace: cdi
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      lbipam.cilium.io/ips: 10.5.0.56
  listeners:
  - hostname: cdi-uploadproxy.10.5.0.56.nip.io
    name: cdi-uploadproxy
    port: 443
    protocol: TLS
    tls:
      mode: Passthrough
