manifests/test/cdi/cdi_gateway.networking.k8s.io_v1alpha2_tlsroute_cdi-uploadproxy.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: cdi-uploadproxy
  namespace: cdi
spec:
  hostnames:
  - cdi-uploadproxy.10.5.0.56.nip.io
  parentRefs:
  - name: cdi
  rules:
  - backendRefs:
    - name: cdi-uploadproxy
      port: 443
