manifests/test/cdi/Ingress-cdi-uploadproxy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.cilium.io/tls-passthrough: enabled
  name: cdi-uploadproxy
  namespace: cdi
spec:
  infrastructure:
    annotations:
      lbipam.cilium.io/ips: 10.5.0.56
  rules:
    - host: cdi-uploadproxy.10.5.0.56.nip.io
      http:
        paths:
          - backend:
              service:
                name: cdi-uploadproxy
                port:
                  number: 443
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - cdi-uploadproxy.10.5.0.56.nip.io
